public/styles/global.css
/* Root Styles */
:root {
/* Colors */
    --green-100: #D6E3E1;
    --green-200: #ADC7C2;
    --green-300: #85A9A3;
    --green-400: #5C7C76;
    --green-500: #334843;
    --green-600: #2C3E3A;
    --green-700: #23322E;
    --green-800: #1A2624;

    --wheat-100: #faf3e7;
    --wheat-200: #e9dab8;
    --wheat-300: #e0cc9f;
    --wheat-400: #d8be87;
    --wheat-500: #d5b880; 
    --wheat-600: #c0a472;
    --wheat-700: #a88c5f;
    --wheat-800: #846f4b;
    --wheat-900: #63553a;


    --gray-100: #F6F6F6;
    --gray-200: #D5D5D5;
    --gray-300: #BFBFBF;
    --gray-400: #9A9A9A;
    --gray-500: #414042;
    --gray-600: #363537;
    --gray-700: #2B2A2C;
    --gray-800: #201F20;

    --white: #FFFFFF;
    --black: #050505;

    /* Transparencies */
    --green-90: rgba(51, 72, 67, 0.9);
    --green-60: rgba(51, 72, 67, 0.6);
    --green-30: rgba(51, 72, 67, 0.3);

    /* Gradients */
    --gradient-green: linear-gradient(180deg, var(--green-500) 0%, var(--green-700) 100%);
    --gradient-wheat: linear-gradient(180deg, var(--wheat-700) 0%, var(--wheat-300) 100%);

    /* Shadows */
    --shadow-color: rgba(26, 38, 36, 0.15);
    --shadow: 
        0px 2px 8px rgba(0, 0, 0, 0.1), 
        0px 4px 15px rgba(0, 0, 0, 0.05)
    ;
    /* Fonts */
    --title-font: 'cheap-pine-sans', sans-serif;
    --title-style: normal;
    --body: 'nunito-sans', sans-serif;

    /* Font Sizes */
    --page-title: clamp(3rem, 5vw + 1rem, 5rem);
    --section-title: clamp(3rem, 4vw + 1rem, 5rem);
    --sub-title: clamp(1.5rem, 2vw + 0.5rem, 2.25rem);
    --md-title: clamp(2rem, 3vw + 0.5rem, 3rem);
    --large-text: clamp(1.125rem, 1.5vw + 0.5rem, 1.25rem);
    --text: clamp(1rem, 1vw + 0.5rem, 1.125rem);
    --small-text: clamp(0.75rem, 1vw + 0.25rem, 1rem);

    /* Padding */
    --side: clamp(1rem, 5vw, 3rem);
    --vertical: clamp(2rem, 5vw, 4rem);
    --lg-vertical: clamp(4rem, 5vw, 8rem);
    --hero: clamp(4rem, 14rem, 14rem);
    --small: 0.25rem;
    --nav: 1rem;

    /* Transitions */
    --hover: all 0.2s ease-in-out;
}

html {
    font-size: 16px;
    scroll-behavior: smooth;
}

body {
    margin: 0;
    padding: 0;
    position: relative;
    background-color: var(--gray-100);
    ::selection {
        background-color: var(--wheat-500);
        color: var(--green-500);
    }
    
}

h1, h2, h3, h4, h5, h6 {
    font-family: var(--title-font);
    font-style: var(--title-style);
    color: var(--green-500);
    margin: 0;
    padding: 0;
}

h1 {
    font-size: var(--page-title);
    line-height: 1;
    font-weight: 500;
}
h2 {
    font-size: var(--section-title);
    line-height: 1;
    font-weight: 500;
}
h3 {
    font-size: var(--md-title);
    line-height: 1;
    font-weight: 500;
}
h4 {
    font-size: var(--large-text);
    line-height: 1;
    font-weight: 500;
}

p {
    font-family: var(--body);
    font-size: var(--text);
    color: var(--gray-700);
    line-height: 1.3;
    margin-top: 1rem;
    padding: 0;
}

li {
    font-family: var(--body);
    font-size: var(--text);
    color: var(--gray-700);
    line-height: 1.3;
    margin-top: 0.75rem;
    padding: 0;
    list-style:disc;
}

.img-main {
    max-width: 100%;
    height: 100%;
    object-fit: cover;
    box-shadow: var(--shadow);
    border-radius: 0.125rem;
}
.hero {
    margin-top: -5rem;
    height: 100%;
    width: 100%;
    object-fit: cover;
}

:focus-visible {
    outline: 3px solid var(--wheat-500);
    outline-offset: 3px;
}

/* Page Transition */
.page-transition-enter {
    opacity: 0;
    transform: translateY(20px);
}

.page-transition-enter-active {
    opacity: 1;
    transform: translateY(0);
    transition: opacity 0.5s ease, transform 0.5s ease;
}

.page-transition-exit {
    opacity: 1;
    transform: translateY(0);
}

.page-transition-exit-active {
    opacity: 0;
    transform: translateY(20px);
    transition: opacity 0.5s ease, transform 0.5s ease;
}

.hidden {
    display: none;
}

/* Section Styles */
.background-image {
    position: absolute;
    background-image: url("/images/backgrounds/bg-image-cactus.webp");
    background-size: cover;
    background-position: bottom;
    background-repeat: no-repeat;
    width: 100%;
    height: 100%;
    z-index: 1;
    opacity: 0.5;
    mix-blend-mode: multiply;
}
.hero-home {
    position: relative;
    z-index: 100;
}
.service-banner {
    background-color: var(--green-500);
    border-top: 6px solid var(--wheat-500);
    border-bottom: 6px solid var(--wheat-500);
}

/* Top Banner */
.top-banner {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 12rem;
    background-image: var(--gradient-green);
    mix-blend-mode: multiply;
    border-bottom: var(--wheat-500) 6px solid;
}

/* Padding */
.padding-hero {
    padding-top: var(--hero);
    padding-bottom: var(--vertical);
    padding-left: var(--side);
    padding-right: var(--side);
}

.padding-global {
    padding: var(--vertical) var(--side);
}

.large-top {
    padding-top: var(--lg-vertical);
    padding-bottom: var(--vertical);
    padding-left: var(--side);
    padding-right: var(--side);
}

.large-bottom {
    padding-top: var(--vertical);
    padding-bottom: var(--lg-vertical);
    padding-left: var(--side);
    padding-right: var(--side);
}

.banner {
    padding: var(--small) var(--side);
}

/* Container */
.container {
    width: 100%;
    max-width: 100rem;
    margin: 0 auto;
    padding: 0;
}

/* Wrapper */
.wrapper {
    display:flex;
    flex-direction: column;
    padding: 0;
}

.column-hero {
    position: relative;
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    gap: 3rem;
    z-index: 2;
}

.center {
    align-items: center;
}

.column {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    gap: 3rem;
}

.vert-center {
    align-items: center;
}

.column-l {
    position: relative;
    display: grid;
    align-items: center;
    grid-template-columns: 1.25fr 1fr;
    gap: 3rem;
    z-index: 100;
}
/* ... */

